refactored whole workspace to suit for xcode 8/ios10

--- a/ShrinkMeister/Info.plist
+++ b/ShrinkMeister/Info.plist
@@ -34,6 +34,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app need load photo</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
